# easy-graphic-equalizer

./: .gitattributes  .gitignore  LICENSE  README.md  README_IT.md  custom_pyqt_item.py  equalizer_window.py  main.py  profiles.py  py-to-exe-settings.json  pyproject.toml  requirements.txt  resource_manager.py  sound-wave.spec
.github/workflows/: release-build.yml
docs/superpowers/audits/: 2026-07-02-audit-bug-codebase.md
docs/superpowers/plans/: 2026-06-17-aspetto-barre-opengl.md  2026-06-17-effetti-reattivi-opengl.md  2026-06-17-modalita-visualizzazione-opengl.md  2026-06-18-gestore-profili.md  2026-06-18-performance-windowing-opengl.md  2026-06-19-in-window-imgui-settings-menu.md  2026-07-02-bonifica-bug-audit.md
docs/superpowers/specs/: 2026-06-17-aspetto-barre-opengl-design.md  2026-06-17-effetti-reattivi-opengl-design.md  2026-06-17-modalita-visualizzazione-opengl-design.md  2026-06-18-gestore-profili-design.md  2026-06-18-performance-windowing-opengl-design.md  (+3 more)
gui/: animated_button.py  background_filepicker_frame.py  color_picker_frame.py  equalizer_preview_widget.py  help_window.py  main_window_gui.py  optionmenu_frame.py  processes_number_frame.py  profile_bar_frame.py  slider_frame.py  theme.py
tests/: test_frame_time_stats.py  test_menu_keys.py  test_profiles.py  test_render_params.py
thread/: AudioBufferAccumulator.py  audioCaptureThread.py  equalizer_preview_worker.py  equalizer_thread.py  equalizer_tkinter_thread.py  frame_time_stats.py  imgui_overlay.py  menu_keys.py  opengl_thread.py  render_params.py  video_decode_thread.py
